--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -60,15 +60,13 @@ table {
 
 html{
     font-size: 14px;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 12%;
+    margin-right: 12%;
     background-color: lightgrey;
 }
 header{
     text-align: center;
     color: black;
-    
-
 }
 header img{
         position: relative; 
@@ -77,23 +75,20 @@ header img{
 header h1{
     color: white;
     position: absolute; 
-    font-size: 3rem;
+    font-size: 2.2rem;
     top: 15%; 
     left: 0; 
     width: 100%; 
 }
 .nav ul {
     list-style: none;
-    
     padding: 0;
     margin: 0;
   }
   .nav li {
     font-family: 'Oswald', sans-serif;
-    font-size: 1.2em;
     line-height: 40px;
     height: 40rem;
-    border-bottom: 1px solid #888;;
   }
    
   .nav a {
@@ -109,11 +104,10 @@ header h1{
   }
    
      .nav li {
-      width: 120px;
-      border-bottom: none;
-      height: 50px;
-      line-height: 50px;
-      font-size: 1.4em;
+      width: 80px;
+      height: 20px;
+      line-height: 40px;
+      font-size: 1.25rem;
     }
    
     /* Option 1 - Display Inline */
@@ -124,22 +118,20 @@ header h1{
   }
   
   
-  
-
-
   /* Styling tag for text on top of the image*/
 
 h1{
     font-size: 4rem;
 }
 h2,h3{
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     font-weight: bold;
     margin-left: 1%;
 }
 li{
     margin-left:3%;
     list-style: disc;
+    font-size: .75rem;
 }
 
   
@@ -156,15 +148,10 @@ body{
       }
 .container_text{
     display: inline;
-    font-size: 1rem;
+    font-size: .75rem;
     letter-spacing: px;
-    word-spacing: 5px;
+    word-spacing: 2px;
   }
-
-footer{
-    text-align: right;
-    font-size: 1.5rem;
-}
 /* Form Styling */
 input[type=text],input[type=email],select {
     width: 100%;
@@ -191,9 +178,14 @@ input[type=text],input[type=email],select {
   
 .formcss{
     border:black;
-    border-width: 2px;
+    border-width: 1px;
     border-style: solid;
-    font-size:1.5rem;
-    width: 100%;
+    font-size:1rem;
+    width: 95%
     word-spacing:2px;
+    padding: 1px;
+}
+footer{
+    text-align: right;
+    font-size: 1rem;
 }
