--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -64,6 +64,7 @@ html{
     margin-right: 12%;
     background-color: lightgrey;
 }
+/* Header Styling */
 header{
     text-align: center;
     color: black;
@@ -87,33 +88,32 @@ header h1{
     padding: 0;
     margin: 0;
   }
-  .nav li {
+.nav li {
     font-family: 'Oswald', sans-serif;
     line-height: 40px;
     height: 40rem;
   }
    
-  .nav a {
+.nav a {
     text-decoration: none;
     align-items: center;
     color: black;
     display: block;
     transition: .3s;  
-    /* Tag for Transition */
+/* Tag for Transition */
   }
-    .nav a.active {
+.nav a.active {
     cursor: default;
   }
    
-     .nav li {
+.nav li {
       width: 80px;
       height: 20px;
       line-height: 40px;
       font-size: 1.25rem;
     }
    
-    /* Option 1 - Display Inline */
-    .nav li {
+.nav li {
       display: inline-block;
       margin-right: -4px;
     }
@@ -131,9 +131,7 @@ li{
     list-style: disc;
     font-size: .75rem;
 }
-
-  
-
+/* Body Of Page Styling */
 body{
     font-family: Arial, Helvetica, sans-serif;
     background-color:lightcyan;
@@ -160,7 +158,7 @@ input[type=text],input[type=email],select {
     border-radius: 4px;
     box-sizing: border-box;
   }
-  input[type=text]{
+input[type=text]{
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -169,11 +167,11 @@ input[type=text],input[type=email],select {
     border-radius: 4px;
     box-sizing: border-box;
   }
-  textarea{
+textarea{
     width: 90%;
 
   }
-  .formcss{
+.formcss{
     border:black;
     border-width: 1px;
     border-style: solid;
@@ -182,6 +180,7 @@ input[type=text],input[type=email],select {
     word-spacing:2px;
     padding: 1px;
 }
+/* Footer Styling */
 footer{
     text-align: right;
     font-size: 1rem;
