--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -79,11 +79,11 @@ header h1{
     color: white;
     position: absolute; 
     font-size: 3rem;
-    top: 250px; 
+    top: 20%; 
     left: 0; 
     width: 100%; 
 }
-/* ***********************Navigation Bar Styling */
+/* ***********************Navigation Bar Styling*************************** */
 .nav ul {
     list-style: none;
     padding: 0;
@@ -108,7 +108,7 @@ header h1{
   }
    
 .nav li {
-      width: 150px;
+      width: 10%;
       height: 20px;
       line-height: 40px;
       font-size: 1.25rem;
