Mid-Term Submittion

--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -169,17 +169,21 @@ input[type=text]{
     box-sizing: border-box;
   }
 textarea{
-    width: 90%;
+    width: 99.9%;
+    height: 40px;
+    resize: none
 
   }
 .formcss{
+    margin-left: 10px;
+    margin-right: 10px;
     border:black;
     border-width: 1px;
     border-style: solid;
     font-size:1rem;
     width: 95%
     word-spacing:2px;
-    padding: 1px;
+    padding: 10px;
 }
 /* Footer Styling */
 footer{
