--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -170,10 +170,17 @@ input[type=text]{
   }
 textarea{
     width: 99.9%;
-    height: 40px;
+    height: 80px;
     resize: none
 
   }
+  input[type="button"]{
+    background: none;
+    padding: 10px 10px;
+
+  }
+
+  
 .formcss{
     margin-left: 10px;
     margin-right: 10px;
