--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -54,3 +54,33 @@ table {
 
 
 /* Browser CSS Reset */
+
+@media only screen and (min-width: 900px)
+{	
+	html
+	{
+		margin-right: 10%;
+		margin-left: 10%;
+	}
+	nav ul
+	{
+		list-style-type: none;
+ 		 margin: 0;
+  		padding: 0;
+ 		 overflow: hidden;
+  		background-color: #333;
+	}
+	nav li
+	{
+		display: inline;
+		float: left;
+	}	
+	nav li a
+	{
+		display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+	}
+}
