--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -55,32 +55,85 @@ table {
 
 /* Browser CSS Reset */
 
-@media only screen and (min-width: 900px)
+
+
+
+/* *******************CSS FOR DESKTOP*************************** */
+@media only screen and (min-width: 800px)
 {	
 	html
 	{
-		margin-right: 10%;
-		margin-left: 10%;
+		font-size: 16px;
+	}
+	nav{
+		overflow: hidden;
+		background-color: #333;
+	  text-align:center;
 	}
 	nav ul
 	{
 		list-style-type: none;
  		 margin: 0;
-  		padding: 0;
- 		 overflow: hidden;
-  		background-color: #333;
+  		 /* padding */
+		   width:1200px;
+		   margin:0 auto;
+		   list-style:none;
 	}
 	nav li
 	{
 		display: inline;
 		float: left;
+		padding: 20px;
 	}	
 	nav li a
 	{
 		display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+  		color: white;
+  		padding: 14px 16px;
+  		text-decoration: none;
 	}
+	nav li a:hover {
+		background-color: #111;
+	}
+	nav li img{
+		padding: 2px;
+	}
+	
 }
+/* ****************Head Image over textcode************************* */
+.headimg
+{
+position: relative;
+width: 100%;
+height: 500px;
+object-fit: cover;
+
+}
+ .headimgtext
+  {	margin-left: 18%;
+	margin-right: 18%;
+	align-items: center;
+	position:absolute;
+	left: 0;
+    top: 350px;
+	position: absolute;
+	top: 300px;
+	left: 0;
+	display:;
+	background: rgba(0, 0, 0, 0.5);
+	z-index: 350px;
+	padding-top: 30px;
+	padding: 20px;
+	width: 60%;
+}
+.headimgtext h1
+{
+	font-size: 4rem;
+}
+main h1
+{
+	
+}
+
+
+/* *************************CSS FOR MOBILE************************ */
