--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -49,91 +49,148 @@ table {
 
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------ */
+/***********************************************************************  Browser CSS Reset **************************************************/																
 
 
-
-
-/* Browser CSS Reset */
-
-
-
-
-/* *******************CSS FOR DESKTOP*************************** */
-@media only screen and (min-width: 800px)
-{	
-	html
-	{
-		font-size: 16px;
-	}
-	nav{
-		overflow: hidden;
-		background-color: #333;
-	  text-align:center;
-	}
-	nav ul
-	{
-		list-style-type: none;
- 		 margin: 0;
-  		 /* padding */
-		   width:1200px;
-		   margin:0 auto;
-		   list-style:none;
-	}
-	nav li
-	{
-		display: inline;
-		float: left;
-		padding: 20px;
-	}	
-	nav li a
-	{
-		display: block;
-  		color: white;
-  		padding: 14px 16px;
-  		text-decoration: none;
-	}
-	nav li a:hover {
-		background-color: #111;
-	}
-	nav li img{
-		padding: 2px;
-	}
-	
-}
-/* ****************Head Image over textcode************************* */
-.headimg
+html
 {
-position: relative;
-width: 100%;
-height: 500px;
-object-fit: cover;
+	font-size: 16px;
+}
 
-}
- .headimgtext
-  {	margin-left: 18%;
-	margin-right: 18%;
-	align-items: center;
-	position:absolute;
-	left: 0;
-    top: 350px;
-	position: absolute;
-	top: 300px;
-	left: 0;
-	display:;
-	background: rgba(0, 0, 0, 0.5);
-	z-index: 350px;
-	padding-top: 30px;
-	padding: 20px;
-	width: 60%;
-}
+/* header Image  */
+
+.headimg
+    {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+
+    }
+.headimgtext
+     {  
+        align-items: center;
+        position:absolute;
+        left: 0;
+        top: 400px;
+        position: absolute;
+        top: 500px;
+        left: 0;
+        padding: 20px;
+        display:;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 350px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: white;
+    }
+/* Text */
+
 .headimgtext h1
 {
-	font-size: 4rem;
+        font-size: 5rem;
 }
-main h1
+button 
 {
-	
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  } 
+
+/* ************************************************************************************CSS FOR DESKTOP***************************************************************************************************** */
+ @media only screen and (min-width: 760px)
+{   
+
+.topnav 
+{
+  overflow: hidden;
+  background-color: #e9e9e9;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #2196F3;
+  color: white;
+}
+
+.topnav .search-container {
+  float: right;
+}
+
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
+
+.topnav .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .search-container button:hover 
+{
+  background: #ccc;
+}
+    .headimg
+    {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+    
+
+    }   
+    .headimgtext
+     {  
+        margin-left: 10%;
+        margin-right: 10%;
+        align-items: center;
+        position:absolute;
+        left: 0;
+        top: 500px;
+        position: absolute;
+        top: 200px;
+        left: 0;
+        display:;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 350px;
+        padding-top: 30px;
+        padding: 80px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: white;
+
+    }
+    .logoimg
+    {
+        float: left;
+        padding: 5px;
+    }
 }
 
 
-/* *************************CSS FOR MOBILE************************ */
