Image of musume

--- a/mtm6201/mtm6201-picture-this-master/style.css
+++ b/mtm6201/mtm6201-picture-this-master/style.css
@@ -31,24 +31,13 @@ h4 {
 
 img {
   display: block;
-}
-
-@media (max-width: 960px) {
-  .header {
-    grid-template-rows: repeat(2, 1fr);
-  }
-  img {
-    width: 100%;
-    height: auto;
-  }
+  /* All images fit container upto 100% width */
+  max-width: 100%;
+  height: auto;
 }
 
 @media (min-width: 960px) {
   .header {
     grid-template-columns: repeat(2, 1fr);
-  }
-  img {
-    width: 100%;
-    height: auto;
   }
 }
