--- a/mtm6201/landing-page/css/main.css
+++ b/mtm6201/landing-page/css/main.css
@@ -202,7 +202,7 @@ footer {
 }
 
 .footerform div {
-    flex-basis: 50%; 
+    flex-basis: 100%; 
     margin-right:1rem;
 }
 .footerform#submit{
@@ -211,3 +211,24 @@ footer {
 .socialmedia a {
     margin: 0.5rem;
 }
+
+
+
+
+/* ***************************Desktop******************************* */
+@media screen and (min-width: 1080px) {
+
+    h1 {
+        font-size: 4rem;
+    }
+    .pmain {
+        display: grid;
+        position: relative;     
+        grid-template-columns: repeat(3, 1fr);
+        margin-top: 2rem;
+    }
+    .pmain img {
+        max-width: 750px;
+        z-index: -1;        
+        margin: 0 -10rem;       
+    }   
