--- a/mtm6201/landing-page/css/main.css
+++ b/mtm6201/landing-page/css/main.css
@@ -169,6 +169,10 @@ p {
     border: none;
     border-radius: 4px;
     font-size: 1rem;
+    font-family: "Montserrat", "sans-serif";
+}
+.contacthead span {
+    font-family: "Montserrat", "sans-serif";
 }
 /* ***********************************************Footer Designing ********************************************************** */
 footer {
@@ -224,8 +228,8 @@ footer {
 .socialmedia {
     flex-basis: 100%;
     align-items: center;
+    
 }
-
 
 /* ***************************Desktop******************************* */
 @media screen and (min-width: 1080px) {
@@ -244,5 +248,7 @@ footer {
         z-index: -3;        
         margin: 0 -11rem;       
     }   
-
     /* **************************Tablet ****************************** */
+@media screen {min-width: 680px){
+        
+}
