--- a/mtm6201/prototype/css/aboutus.css
+++ b/mtm6201/prototype/css/aboutus.css
@@ -18,11 +18,25 @@ body {
 	font-size: 1.2rem;
 }
 
-.header .breadcrumb a:link {
-	letter-spacing: 1px;
+.navbar {
+	width: 100%;
+	background-color: #555;
+	overflow: auto;
+	margin: 0px;
+
+}
+
+.navbar a {
+	float: left;
+	padding: 12px;
 	color: white;
 	text-decoration: none;
+	font-size: 17px;
+	margin-right: 0.5rem;
+}
 
+.navbar a:hover {
+	background-color: #000;
 }
 
 .info-box {
