--- a/mtm6201/prototype/css/products.css
+++ b/mtm6201/prototype/css/products.css
@@ -16,11 +16,25 @@ body {
 	box-sizing: border-box;
 }
 
-.header .breadcrumb a:link {
-	letter-spacing: 1px;
+.navbar {
+	width: 100%;
+	background-color: #555;
+	overflow: auto;
+	margin: 0px;
+
+}
+
+.navbar a {
+	float: left;
+	padding: 12px;
 	color: white;
 	text-decoration: none;
+	font-size: 17px;
+	margin-right: 0.5rem;
+}
 
+.navbar a:hover {
+	background-color: #000;
 }
 
 .products-list {
