--- a/mtm6201/prototype/css/style.css
+++ b/mtm6201/prototype/css/style.css
@@ -46,14 +46,14 @@ body {
 	align-items: center;
 	justify-content: center;
 	box-sizing: border-box;
-	background-color: rgb(170, 73, 170);
+	background-color: #a491d3;
 }
 
 .message-box {
 	width: 60%;
 	border: 1px solid black;
 	box-sizing: border-box;
-	background-color: rgb(172, 151, 151);
+	background-color:#818aa3;
 	color: #f1f1f1;
 }
 
@@ -78,14 +78,15 @@ body {
 }
 
 .message-box button {
-	display: block;
-	padding: 1.2rem 2rem;
-	font-size: 1.5rem;
-	margin: 1rem auto;
-	color: #f1f1f1;
-	box-shadow: 3px 1px 1px #363633;
-	background-color: transparent;
-	border: 5px solid yellow;
+	font-weight: bold;
+    font-size: 1.25rem;
+    background-color: #ff8480;
+    color: white;
+    padding: 0.75rem;
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+	/* border: 5px solid yellow; */
 	font-weight: bolder;
 	cursor: pointer;
 }
