--- a/mtm6201/prototype/css/aboutus.css
+++ b/mtm6201/prototype/css/aboutus.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap');
 
 body {
 	margin: 0px;
+	font-family: 'Source Sans Pro', sans-serif;
 }
 
 .header {
