--- a/mtm6201/prototype/css/style.css
+++ b/mtm6201/prototype/css/style.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap');
 
 body {
 	margin: 0px;
 	padding: 0px;
+	font-family: 'Source Sans Pro', sans-serif;
 }
 
 .navbar {
@@ -86,7 +88,6 @@ body {
     width: 100%;
     border: none;
     border-radius: 10px;
-	/* border: 5px solid yellow; */
 	font-weight: bolder;
 	cursor: pointer;
 }
