animation on nav

--- a/mtm6201/prototype/css/products.css
+++ b/mtm6201/prototype/css/products.css
@@ -73,3 +73,16 @@ body {
 .card button:hover {
 	opacity: 0.7;
 }
+
+
+
+/*  */
+@media(max-width: 500px) {
+	.container {
+		flex-direction: column;
+	}
+
+	.navbar a {
+		float: none;
+		display: block;
+	}
