--- a/mtm6201/prototype/css/contact_us.css
+++ b/mtm6201/prototype/css/contact_us.css
@@ -5,25 +5,24 @@ body {
 	font-family: 'Source Sans Pro', sans-serif;
 }
 
+
 .header {
 	display: flex;
-	align-items: start;
-	justify-content: center;
+	justify-content: flex-start;
 	flex-direction: column;
-
-	height: 15vh;
 	width: 100%;
-	background-color: #555;
+	background-color: #190933;
 	color: #f1f1f1;
 	margin: 0px;
 	padding-left: 1rem;
 	box-sizing: border-box;
-	font-size: 1.2rem;
+	font-size: 1.5rem;
 }
+
 
 .navbar {
 	width: 100%;
-	background-color: #555;
+	background-color: #190933;
 	overflow: auto;
 	margin: 0px;
 
@@ -40,6 +39,19 @@ body {
 
 .navbar a:hover {
 	background-color: #000;
+}
+
+/* Code added so that image align or float on left side of nav bar */
+.navbar img {
+	float: right;
+
+}
+
+/* ****************animantion  added in th top right corner of the nav bar in brand logo*********** */
+
+.navbar img:hover {
+	transform: scale(0.5);
+	transition: 2s;
 }
 
 .contact-us-section {
@@ -102,7 +114,7 @@ body {
 
 }
 
-@media(max-width:599px) {
+@media(max-width:500px) {
 	.contact-us-section {
 		flex-direction: column;
 	}
@@ -116,3 +128,4 @@ body {
 
 	}
 }
+
