--- a/mtm6201/prototype/css/products.css
+++ b/mtm6201/prototype/css/products.css
@@ -8,12 +8,10 @@ body {
 
 .header {
 	display: flex;
-
 	justify-content: flex-start;
 	flex-direction: column;
-	height: 15vh;
 	width: 100%;
-	background-color: #555;
+	background-color: #190933;
 	color: #f1f1f1;
 	margin: 0px;
 	padding-left: 1rem;
@@ -22,7 +20,7 @@ body {
 
 .navbar {
 	width: 100%;
-	background-color: #555;
+	background-color: #190933;
 	overflow: auto;
 	margin: 0px;
 
@@ -39,6 +37,23 @@ body {
 
 .navbar a:hover {
 	background-color: #000;
+}
+
+/* Code added so that image align or float on left side of nav bar */
+.navbar img {
+	float: right;
+
+}
+
+/* ****************animantion  added in th top right corner of the nav bar in brand logo*********** */
+
+.navbar img:hover {
+	transform: scale(0.5);
+	transition: 2s;
+}
+
+.active {
+	background-color: #04AA6D;
 }
 
 .products-list {
@@ -59,13 +74,13 @@ body {
 
 .card button {
 	font-weight: bold;
-    font-size: 1.25rem;
-    background-color: #ff8480;
-    color: white;
-    padding: 0.75rem;
-    width: 100%;
-    border: none;
-    border-radius: 10px;
+	font-size: 1.25rem;
+	background-color: #ff8480;
+	color: white;
+	padding: 0.75rem;
+	width: 100%;
+	border: none;
+	border-radius: 10px;
 	font-weight: bolder;
 	cursor: pointer;
 }
@@ -73,10 +88,31 @@ body {
 .card button:hover {
 	opacity: 0.7;
 }
+/* ****************animantion  added on photos of the products*********** */
+.card img:hover {
+	transform: scale(1.2);
+	transition: 2s;
+}
+
+.footer {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	position: fixed;
+	bottom: 0;
+	background-color: #190933;
+	color: #f1f1f1;
+}
+/* *****************meida Quary for Tablet Device************* */
+@media(max-width: 720px ){
+.navbar a{
+	float: center;
+}
+}
 
 
 
-/*  */
+/****** Media Quary for mobile device***************/
 @media(max-width: 500px) {
 	.container {
 		flex-direction: column;
