--- a/mtm6201/prototype/css/contact_us.css
+++ b/mtm6201/prototype/css/contact_us.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap');
+
 body {
 	margin: 0px;
 	font-family: 'Source Sans Pro', sans-serif;
@@ -114,15 +115,10 @@ body {
 
 }
 
-.footer {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	position: fixed;
-	bottom: 0;
-	background-color: #190933;
-	color: #f1f1f1;
+.illustration img {
+	max-width: 100%;
 }
+
 
 @media(max-width:500px) {
 	.contact-us-section {
@@ -138,4 +134,3 @@ body {
 
 	}
 }
-
