--- a/mtm6201/prototype/css/style.css
+++ b/mtm6201/prototype/css/style.css
@@ -78,7 +78,7 @@ body {
 	background-color: #818aa3;
 	color: #f1f1f1;
 }
-/**************** Diffrent fount family used ************* */
+/**************** Diffrent font family used ************* */
 .message-box .header {
 	padding: 1rem;
 	font-size: 2rem;
