--- a/css/style.css
+++ b/css/style.css
@@ -50,16 +50,22 @@ table {
 /* Portfolio Styles */
 
 /* ****Use boder boxing to prevent padding to go over 100% width */
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
 html {
 	box-sizing: border-box;
 }
+
+@font-face {
+	font-family: myFirstFont;
+	src: url(sansation_light.woff);
+  }
 
 *, *::after, *::before {
 	box-sizing: border-box;
 }
 
 body {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Inconsolata', monospace;
 }
 
 h1 {
@@ -331,12 +337,22 @@ footer .contactme li{
 		max-width: 1600px;
 	}
 
+	.footer .footernav{
+		margin-top: 0px;
+		text-align: left;
+	}
+
 	/* Skills Page */
 
 	.myskills h1 {
 		text-transform: uppercase;
 		font-size: 5rem;
 		padding-top: 2rem;
+	}
+
+	.footer .footernav{
+		margin-top: 0px;
+		text-align: left;
 	}
 
 	/* footer */
