--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ table {
 	border-spacing: 0;
 }
 
-/* Portfolio Styles */
+/* Portfolio S**tyles */
 
 /* ****Use boder boxing to prevent padding to go over 100% width */
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
